/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2022 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2022 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/

syntax = "proto3";
package opennms.azure.api;

option java_multiple_files = true;
option java_package = "org.opennms.horizon.azure.api";


message AzureScanResponse {
  repeated AzureScanItem results = 2;
}

message AzureScanItem {
  string id = 1;
  string name = 2;
  string resource_group = 3;
  int64 active_discovery_id = 4;
  repeated AzureScanNetworkInterfaceItem network_interface_items = 5;
}

message AzureScanNetworkInterfaceItem {
  string id = 1;
  string ip_address = 2;
}

// TODO: the naming here is not Real Obvious - "what's the difference between AzureResponseMetric and AzureResultMetric?"
message AzureResponseMetric {
  repeated AzureResultMetric results = 2;
}

enum AzureValueType {
  INT64 = 0;
}

message AzureValueMetric {
  AzureValueType type = 1;
  oneof value {
    uint64 uint64 = 2;
  };
}

message AzureResultMetric {
  string resource_name = 1;
  string resource_group = 2;
  AzureValueMetric value = 3;
  string alias = 4;
}
